Edited wiki page through web user interface.

--- a/wiki/Requirements.wiki
+++ b/wiki/Requirements.wiki
@@ -1,3 +1,4 @@
+#labels Phase-Requirements
 The application will provide the user with an easy to use interface to view blogs, listen to podcast, and watch video podcast.
 
 The user will be able to subscribe to RSS Feeds for Blogs, Podcast, and video podcast.
