Edited wiki page through web user interface.

--- a/wiki/Tools.wiki
+++ b/wiki/Tools.wiki
@@ -1,10 +1,10 @@
 List of tools used.
 
-  1.  Resharper
-  2.  NUnit, NUnit2Report and TestDriven.Net
-  3.  NAnt, NAntContrib and Nant GUI
-  4.  Rhino Tools
-  5.  NDoc
-  6.  FxCop
-  7.  GoogleCode
-  8.  CruiseControl.NET
+ #Resharper
+ #NUnit, NUnit2Report and TestDriven.Net
+ #NAnt, NAntContrib and Nant GUI
+ #Rhino Tools
+ #NDoc
+ #FxCop
+ #GoogleCode
+ #CruiseControl.NET
