--- a/wiki/Technologies.wiki
+++ b/wiki/Technologies.wiki
@@ -1,6 +1,6 @@
-1.  Entity frame work 
-2.  ASP.NET MVC
-3.  WCF Syndication
-4.  WPF
-5.  Linq
-6.  VS.Net 2008 .Net
+ #Entity frame work 
+ #ASP.NET MVC
+ #WCF Syndication
+ #WPF
+ #Linq
+ #VS.Net 2008 .Net
