Edited wiki page through web user interface.

--- a/wiki/Requirements.wiki
+++ b/wiki/Requirements.wiki
@@ -1,22 +1,12 @@
 #labels Phase-Requirements
-The application will provide the user with an easy to use interface to view blogs, listen to podcast, and watch video podcast.
-
-The user will be able to subscribe to RSS Feeds for Blogs, Podcast, and video podcast.
-
-The default view will display blog entries from all subscribed blogs sorted by publication date.
-
-The user will be able to control the number of blog entries that are displayed on the main page.
-
-The user interface will allow the user to navigate by tags/categories, dates, and blog source.
-
 =Requirements List=
 _The following items can be a start for creating more detailed Use Cases.  These Items will decompose into more clearly defined Use Cases and Scenarios_:
 
 * [AddRSSFeed Add RSS Feed]
 
-* Delete RSS Feed
+* [DeleteRSSFeed Delete RSS Feed]
 
-* Update RSS Feed
+* [UpdateSSFeed Update RSS Feed]
 
 * Display RSS Feed Items By Pubication Date
 
