Edited wiki page through web user interface.

--- a/wiki/Resources.wiki
+++ b/wiki/Resources.wiki
@@ -4,7 +4,17 @@ This page will be use to collect links to resources we have read and used on thi
 
 = User Stories =
 
+A user story is a software system requirement formulated as one or two sentences in the everyday language of the user.
+
+Resources:
+  * 
 Add your content here.  Format your content with:
   * Text in *bold* or _italic_
   * Headings, paragraphs, and lists
   * Automatic links to other wiki pages
+
+= Behavior Driven Design =
+Resources:
+  * [http://dannorth.net/introducing-bdd]Introducing BDD - Dan North 
+
+= Test Driven Design = 
