Edited wiki page through web user interface.

--- a/wiki/Resources.wiki
+++ b/wiki/Resources.wiki
@@ -15,6 +15,6 @@ Add your content here.  Format your content with:
 
 = Behavior Driven Design =
 Resources:
-  * [http://dannorth.net/introducing-bdd]Introducing BDD - Dan North 
+  * [http://dannorth.net/introducing-bdd Introducing BDD - Dan North]
 
 = Test Driven Design = 
