--- a/wiki/AddRSSFeed.wiki
+++ b/wiki/AddRSSFeed.wiki
@@ -20,6 +20,6 @@ Example:
 
 Given an Administrator adds a feed
    And the feed is valid
-When I ?
+When I < What Goes Here >
 Then the feed should be stored
    And the updated list of feed should be displayed
