--- a/wiki/AdminLogon.wiki
+++ b/wiki/AdminLogon.wiki
@@ -1,11 +1,10 @@
 [Requirements]
 
 =User Story=
-{{{
-As an Guest  
+
+'As an Guest  
 I want to Logon 
-So that I can administer the site 
-}}}
+So that I can administer the site'
 
 =Scenario 1=
 
