Edited wiki page through web user interface.

--- a/wiki/AdminLogon.wiki
+++ b/wiki/AdminLogon.wiki
@@ -2,9 +2,9 @@
 
 =User Story=
 
-'As an Guest  
+`As an Guest  
 I want to Logon 
-So that I can administer the site'
+So that I can administer the site`
 
 =Scenario 1=
 
