Edited wiki page through web user interface.

--- a/wiki/AdminLogon.wiki
+++ b/wiki/AdminLogon.wiki
@@ -2,7 +2,11 @@
 
 =User Story=
 
-`As an Guest  
+As a user
+I want to logon
+So that I can administer the site
+
+As an Guest  
 I want to Logon 
 So that I can administer the site`
 
