Edited wiki page through web user interface.

--- a/wiki/Resources.wiki
+++ b/wiki/Resources.wiki
@@ -18,4 +18,7 @@ Resources:
 = Test Driven Design = 
 Resources:
   * [http://daveastels.com/2005/07/05/a-new-look-at-test-driven-development/ A New Look at Test Driven Development - Dave Astels]
-  
+
+= nAnt - Build Tools =
+Resources:
+  * [http://www.jpboodhoo.com/blog/NAntStarterSeries.aspx Jean-Paul Boodhoo's NAnt Starter Series]
