--- a/wiki/Resources.wiki
+++ b/wiki/Resources.wiki
@@ -3,7 +3,6 @@
 This page will be used to collect links to resources we have read and used on this project.
 
 = User Stories =
-
 A user story is a software system requirement formulated as one or two sentences in the everyday language of the user.
 
 Resources:
@@ -23,3 +22,7 @@ Resources:
 Resources:
   * [http://www.jpboodhoo.com/blog/NAntStarterSeries.aspx Jean-Paul Boodhoo's NAnt Starter Series]
   * [http://www.jpboodhoo.com/blog/DirectoryStructureForProjects.aspx Directory Structure for Projects]
+
+= MVC ASP .NET Framework =
+Resources:
+  * [http://www.manning.com/palermo/ Jeffrey Palermo - ASP .NET MVC In Action Book]
